--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,21 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <h1>Users#index</h1>
+  <p>Find me in app/views/users/index.html.erb</p>
 
-<table>
-  <thead>
-  <td>ID</td>
-  <td>email</td>
-  <td>name</td>
-  </thead>
-  <% @users.each do |user| %>
-    <tr>
-      <td><%= user.id %></td>
-      <td><%= user.email %></td>
-      <td><%= user.name %></td>
-    </tr>
-  <% end %>
-</table>
+  <table class="table">
+    <thead>
+    <td>ID</td>
+    <td>email</td>
+    <td>name</td>
+    </thead>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.id %></td>
+        <td><%= user.email %></td>
+        <td><%= user.name %></td>
+      </tr>
+    <% end %>
+  </table>
 
-<%= paginate @users %>
+  <%= paginate @users %>
+</div>
